--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,1 @@
-.hidden{display:none}.container{text-align:center}.headerContainer img{height:250px;width:960px}.login{text-align:center;font-size:0.9em}.login input{padding:5%}.hidden{display:none}.login h1{font-size:1.1em}
+.hidden{display:none}.container{text-align:center}.headerContainer img{height:250px;width:960px}.login{text-align:center;border:1px solid lightgray}.hidden{display:none}.login h1{font-size:0.9em}.button{margin:5px}.statusContainer{border:1px solid lightgray}
