--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,10 +28,16 @@
   font-size: 0.9em;
 }
 
-.button {
+button {
   margin: 5px;
 }
 
 .statusContainer {
   border: 1px solid lightgray;
+  margin: 15px;
+}
+
+.addBookProfile {
+  border: 1px solid lightgray;
+  margin: 15px;
 }
